--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "activityBar.background": "#072A68",
     "titleBar.activeBackground": "#0A3B91",
     "titleBar.activeForeground": "#F9FBFF"
-  }
+  },
+  "liveServer.settings.port": 5501
 }
